Update tests with new CLI options